# tcp-trading-central-panel

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sqlfluff  LICENSE  README.md  azure.yaml  docker-compose.dev.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
db/: README.md
db/migrations/: V001__init.sql  V002__synth_logic.sql  V003__rls_db_owner_bypass.sql
db/migrations/rollback/: V001__init.down.sql  V002__synth_logic.down.sql
docs/: dev_setup.md  glossary.md  setup.md  troubleshooting.md
docs/decisions/: ADR-001-powerbi-deployment.md  ADR-002-daily-pnl-materialisation.md  ADR-003-rls-session-context.md  ADR-004-bacpac-export-schedule.md  ADR-005-scope-resolution-rls-bypass.md  INDEX.md
docs/design/: 01_business_requirements.md  02_database_design.md  03_architecture.md  ai_prompt_cache_contents.md
docs/design/reviews/: review_arch_pass1.md  review_convergence_pass2.md  review_db_pass1.md  review_etapa10_architecture.md  review_etapa10_code.md  review_etapa10_convergence_pass2.md  review_etapa10_security.md  review_etapa11_code.md  review_etapa11_convergence_pass2.md  review_etapa11_security.md  review_etapa12_code.md  review_etapa12_convergence_pass2.md  review_etapa12_docs.md  review_etapa13_convergence_pass2.md  review_etapa13_docs.md  review_etapa13_tutorial.md  review_etapa2_convergence_pass2.md  review_etapa2_python_ci_pass1.md  review_etapa2_security_pass1.md  review_etapa2_sql_pass1.md  review_etapa3_convergence_pass2.md  review_etapa3_dataeng_pass1.md  review_etapa3_python_pass1.md  review_etapa3_stats_pass1.md  review_etapa4_arch_pass1.md  review_etapa4_convergence_pass2.md  review_etapa4_deploy_pass1.md  review_etapa4_security_pass1.md  review_etapa5_ai_pass1.md  review_etapa5_convergence_pass2.md  review_etapa5_holistic_pass1.md  review_etapa5_python_pass1.md  review_etapa5_security_pass1.md  review_etapa6_backend_security.md  review_etapa6_convergence_pass2.md  review_etapa6_security_sweep.md  review_etapa7_convergence_pass2.md  review_etapa7_deploy.md  review_etapa7_holistic.md  review_etapa7_measures.md  (+10 more)
docs/diagrams/: ai_sequence.mmd  ai_vs_bi_scope.mmd  arch_platform.mmd  arch_request.mmd  cron_flow.mmd  deployment_pipeline.mmd  erd.mmd  erd_org.mmd  erd_pnl.mmd  erd_trade.mmd  mermaid-config.json
docs/inventory/: source_artifacts.md
docs/observability/: README.md  slo.md
docs/runbooks/: powerbi_deploy.md
docs/security/: bootstrap_window.md  credentials_rotation.md  incident_response.md  threat_model.md
function_app/: .funcignore  README.md  function_app.py  host.json  local.settings.json.template  requirements.txt
function_app/tcp/: README.md  __init__.py  safe_query.py
function_app/tcp/ai/: anthropic_client.py  prompts.py
function_app/tcp/synth/: __init__.py  _rng.py  commissions.py  runner.py
function_app/triggers/: ask.py  bacpac_export.py  daily_generator.py  ping.py  warmup.py
infra/: main.bicep  main.parameters.prod.json
infra/modules/: alerts.bicep  functions.bicep  keyvault.bicep  observability.bicep  rg_role_assignment.bicep  sql.bicep  storage.bicep  storage_rbac.bicep  swa.bicep  workbook.bicep
infra/observability/: workbook.json
infra/observability/kusto/: 01_ask_latency_percentiles.kql  02_daily_generator_outcomes.kql  03_anthropic_tokens_and_cost.kql  04_function_cold_starts.kql  05_sql_vcore_consumption.kql  06_error_rate_by_operation.kql  07_ask_question_audit.kql  08_bacpac_export_health.kql  09_rate_limit_hits.kql
infra/scripts/: postprovision.ps1  postprovision.sh
powerbi/: POWERBI_DESKTOP_RUNBOOK.md  README.md  TCP_TradingCentralPanel_Thesis.pbip  deploy.ps1
powerbi/TCP_TradingCentralPanel_Thesis.Report/: .platform  definition.pbir
powerbi/TCP_TradingCentralPanel_Thesis.Report/StaticResources/RegisteredResources/: TCPDarkFinancial.json
powerbi/TCP_TradingCentralPanel_Thesis.Report/StaticResources/SharedResources/BaseThemes/: CY26SU05.json
powerbi/TCP_TradingCentralPanel_Thesis.Report/definition/: report.json
powerbi/TCP_TradingCentralPanel_Thesis.Report/definition/pages/: pages.json
powerbi/TCP_TradingCentralPanel_Thesis.Report/definition/pages/p1overview/: page.json
powerbi/TCP_TradingCentralPanel_Thesis.SemanticModel/: .platform
powerbi/TCP_TradingCentralPanel_Thesis.SemanticModel/definition/: expressions.tmdl  model.tmdl  relationships.tmdl
powerbi/TCP_TradingCentralPanel_Thesis.SemanticModel/definition/cultures/: ro-RO.tmdl
powerbi/TCP_TradingCentralPanel_Thesis.SemanticModel/definition/tables/: _Measures.tmdl  config_Capital.tmdl  dim_Accounts.tmdl  dim_Companies.tmdl  dim_Date.tmdl  dim_Employees.tmdl  dim_Markets.tmdl  dim_OrderType.tmdl  dim_Sessions.tmdl  dim_Teams.tmdl  dim_TradingFloors.tmdl  fact_DailyTraderPnL.tmdl  fact_Trades.tmdl
powerbi/scripts/: Helpers.psm1
scripts/: backfill_trades.py  build_func_zip.py  check_swa_placeholder.py  compute_migration_checksum.py  insert_powerbi_sp_role.sql  insert_user_role.sql  render_migration.py  run_powerbi_deploy.ps1  seed_aad.py  setup_powerbi_sp.ps1  setup_powerbi_sql_user.sql  setup_swa_aad.ps1  tmdl_to_bim.ps1  tmdl_to_bim.py  validate_naming_convention.py  verify_trades.sql
swa/: .gitignore  README.md  app.js  index.html  local.settings.json.example  package-lock.json  package.json  staticwebapp.config.json  style.css
tcp/: db.py
tcp/ai/: __init__.py
tcp/synth/: fx_rates.py  runner.py  seed_employees.py  trades.py
tests/: conftest.py
tests/integration/: test_ask_endpoint.py  test_db_smoke.py  test_generator_idempotency.py  test_telemetry_no_pii.py
tests/sql/: test_fx_rate_completeness.sql  test_naming_convention.sql  test_rls_smoke.sql
tests/unit/: test_ai_anthropic_client.py  test_ai_prompts.py  test_ask_trigger.py  test_bacpac_export.py  test_commissions.py  test_compute_migration_checksum.py  test_db.py  test_function_app_imports.py  test_fx_rates.py  test_rng.py  test_safe_query.py  test_seed_employees.py  test_synth_distributions.py  test_synth_runner.py  test_synth_trades.py  test_validate_naming_convention.py
(+87 files in other folders)
